--- a/src/Feedbacks/ReceivedFeedbacks/ReceivedFeedbacks.css
+++ b/src/Feedbacks/ReceivedFeedbacks/ReceivedFeedbacks.css
@@ -6,10 +6,8 @@ body {
 .review-feedback-main {
 	position: absolute;
 	top: 0;
-	bottom: 0;
-	left: 0;
 	right: 0;
-	width: 100vw;
+	width: calc(100vw - 50px);
 	height: 100vh;
 	overflow: scroll;
 }
@@ -23,71 +21,6 @@ body {
 	padding: 30px;
 }
 
-.review-feedback-main .card .title {
-	color: #ffffff;
-	font-size: 22px;
-	margin-left: 35px;
-}
-
-.review-feedback-main .card .search-wrapper {
-	position: relative;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-.review-feedback-main .card .search-wrapper img {
-	width: 23px;
-	height: 23px;
-	position: absolute;
-	left: 50px;
-	color: #8c8aa7;
-}
-
-.review-feedback-main .card .search-wrapper input[type=text] {
-	width: 450px;
-	height: 70px;
-	background: #262538;
-	border: 1px solid #49485d;
-	border-radius: 10px;
-	margin: 18px 0px;
-	box-sizing: border-box;
-	padding-left: 55px;
-	font-size: 18px;
-	color: #8c8aa7;
-	cursor: text;
-}
-
-.review-feedback-main .card .search-wrapper input[type=text]:focus {
-	outline: none !important;
-}
-
-.review-feedback-main .card .tags-wrapper {
-	max-height: 130px;
-	margin: 35px;
-}
-
-.review-feedback-main .card .tags-wrapper .tags-header {
-	color: #ffffff;
-	font-size: 22px;
-	margin-bottom: 14px;
-}
-
-.review-feedback-main .card .tags-wrapper .tags-container .tag {
-	display: inline-flex;
-	background: #1d1c2d;
-	color: #8c8aa7;
-	border-radius: 5px;
-	padding: 12px;
-	margin: 10px 3px;
-	cursor: pointer;
-}
-
-.review-feedback-main .card .tags-wrapper .tags-container .selected {
-	background: #8780f8;
-	color: #ffffff;
-}
-
 .review-feedback-main .card .reviews-list {
 	display: flex;
 	flex-direction: row;
@@ -95,408 +28,4 @@ body {
 	align-items: center;
 	gap: 20px;
 	flex-wrap: wrap;
-}
-
-.review-feedback-main .card .reviews-list .review-card {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-around;
-	width: 450px;
-	height: 250px;
-	background: #2c2b3f;
-	border-radius: 10px;
-	padding: 10px;
-}
-
-.review-feedback-main .card .reviews-list .review-card .review-header {
-	display: flex;
-	align-items: center;
-	justify-content: space-around;
-	color: #ffffff;
-	font-weight: bold;
-}
-
-.review-feedback-main .card .reviews-list .review-card .review-header .name-group {
-	display: flex;
-	align-items: center;
-}
-
-.review-feedback-main .card .reviews-list .review-card .review-header .name-group .info {
-	display: flex;
-	flex-direction: column;
-}
-
-.review-feedback-main .card .reviews-list .review-card .review-header .name-group .name {
-	text-align: left;
-}
-
-.review-feedback-main .card .reviews-list .review-card .review-header .name-group .designation {
-	margin: 0;
-	font-size: .8rem;
-	font-weight: 300;
-	color: #8c8aa7;
-	text-align: left;
-}
-
-.review-feedback-main .card .reviews-list .review-card .review-header .name-group .initials {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 48px;
-	height: 48px;
-	margin-right: 12px;
-	border-radius: 50%;
-	background: #d56a6a;
-}
-
-.review-feedback-main .card .reviews-list .review-card .review-header .rating i {
-	color: #f3d779;
-}
-
-.review-feedback-main .card .reviews-list .review-card .review-description {
-	color: #ffffff;
-	font-weight: 400;
-	margin: 0px 45px;
-	text-align: start;
-	/* maximum line is 3 */
-	display: -webkit-box;
-	-webkit-line-clamp: 3;
-	-webkit-box-orient: vertical;
-	overflow: hidden;
-}
-
-.review-feedback-main .card .reviews-list .review-card .review-details {
-	display: flex;
-	justify-content: space-between;
-	margin: 0px 45px;
-	align-items: center;
-	color: #8c8aa7;
-}
-
-.review-feedback-main .card .reviews-list .review-card .review-details .share-group {
-	display: flex;
-	align-items: center;
-	padding: 8px;
-	border: 1px solid #79f39d;
-	border-radius: 5px;
-	cursor: pointer;
-	background: unset;
-}
-
-.review-feedback-main .card .reviews-list .review-card .review-details .share-group i {
-	margin-right: 10px;
-	color: #8c8aa7;
-}
-
-.review-feedback-main .card .reviews-list .review-card .review-details .share-group>span {
-	background: unset;
-	border: unset;
-	color: #8c8aa7;
-}
-
-
-/* popup design start  */
-.review-details-popIn-overlay {
-	position: absolute;
-	height: 100vh;
-	width: 100vw;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	z-index: 9;
-	background: #6d698f7d;
-}
-
-.review-details-popIn {
-	position: absolute;
-	height: 60vh;
-	width: 882px;
-	background: #2C2B3F;
-	top: 50%;
-	left: 50%;
-	z-index: 99;
-	transform: translate(-50%, -50%);
-	border-radius: 10px;
-	padding: 48px;
-	box-sizing: border-box;
-	display: flex;
-	gap: 70px;
-}
-
-@media (max-width: 1024px) {
-	.review-details-popIn {
-		width: 100%;
-		height: 100%;
-		padding-left: 60px;
-		flex-direction: column;
-		overflow-y: scroll;
-		border-radius: 0;
-		gap: 40px;
-	}
-}
-
-.review-details-popIn .review-details-popIn-header {
-	width: 55%;
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
-}
-
-@media (max-width: 1024px) {
-	.review-details-popIn .review-details-popIn-header {
-		width: 100%;
-	}
-}
-
-.review-details-popIn .initials {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 75px;
-	height: 75px;
-	margin-right: 12px;
-	border-radius: 50%;
-	background: #d56a6a;
-	font-size: 25px;
-	font-weight: bold;
-	color: white;
-	font-family: "Mulish", sans-serif;
-}
-
-.review-details-popIn .info {
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
-}
-
-.review-details-popIn .name {
-	font-family: "Mulish", sans-serif;
-	font-style: normal;
-	font-weight: 600;
-	font-size: 28px;
-	line-height: 36px;
-	text-align: center;
-	color: #FFFFFF;
-	margin-top: 16px;
-	text-align: left;
-}
-
-.review-details-popIn .designation {
-	font-family: "Mulish", sans-serif;
-	font-style: normal;
-	font-weight: 400;
-	font-size: 16px;
-	line-height: 24px;
-	color: #FFFFFF;
-	margin-bottom: unset;
-}
-
-.review-details-popIn .review-date {
-	font-family: "Mulish", sans-serif;
-	font-style: normal;
-	font-weight: 400;
-	font-size: 13px;
-	line-height: 24px;
-	color: #67648b;
-	margin-bottom: unset;
-	margin-top: 40px;
-}
-
-@media (max-width: 1024px) {
-	.review-details-popIn .review-date {
-		margin-top: 7px;
-	}
-}
-
-.review-details-popIn .review-description {
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
-	margin-top: 59px;
-	width: 100%;
-}
-
-@media (max-width: 1024px) {
-	.review-details-popIn .review-description {
-		margin-top: 40px;
-	}
-}
-
-.review-details-popIn .review-description-title {
-	font-family: "Mulish", sans-serif;
-	font-style: normal;
-	font-weight: 600;
-	font-size: 24px;
-	line-height: 31px;
-	text-align: center;
-	color: #FFFFFF;
-}
-
-.review-details-popIn .review-description-details {
-	font-family: "Mulish", sans-serif;
-	font-style: normal;
-	font-weight: 400;
-	font-size: 16px;
-	line-height: 24px;
-	color: #FFFFFF;
-	text-align: left;
-	margin-top: 16px;
-	overflow-y: auto;
-	height: 170px;
-	padding-right: 10px;
-	width: 100%;
-}
-
-@media (max-width: 1024px) {
-	.review-details-popIn .review-description-details {
-		height: auto;
-	}
-}
-
-.review-details-popIn .review-description-details::-webkit-scrollbar {
-	width: 7px;
-}
-
-.review-details-popIn .review-description-details::-webkit-scrollbar-track {
-	background-color: #383752;
-	-webkit-border-radius: 10px;
-	border-radius: 10px;
-}
-
-.review-details-popIn .review-description-details::-webkit-scrollbar-thumb {
-	-webkit-border-radius: 10px;
-	border-radius: 10px;
-	background: #1e1d2b
-}
-
-.review-details-popIn .details-rating {
-	width: auto;
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
-	margin-top: 90px;
-}
-
-@media (max-width: 1024px) {
-	.review-details-popIn .details-rating {
-		margin-top: unset;
-	}
-}
-
-.review-details-popIn .rating-wrapper {
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
-}
-
-.review-details-popIn .rating-title {
-	font-family: "Mulish", sans-serif;
-	font-style: normal;
-	font-weight: 600;
-	font-size: 24px;
-	line-height: 31px;
-	text-align: center;
-	color: #FFFFFF;
-}
-
-.review-details-popIn .rating-inner-wrapper {
-	display: flex;
-	gap: 10px;
-	align-items: center;
-}
-
-.review-details-popIn .rating-text {
-	font-family: "Mulish", sans-serif;
-	font-style: normal;
-	font-weight: 800;
-	font-size: 26px;
-	line-height: 39px;
-	text-align: center;
-	color: #FFFFFF;
-}
-
-.review-details-popIn i#one.fa-star {
-	color: #f3d779;
-}
-
-.review-details-popIn .review-details-main-wrapper {
-	margin-top: 50px;
-	display: flex;
-	flex-direction: column;
-	gap: 16px;
-	align-items: self-start;
-}
-
-.review-details-popIn .review-details-main-wrapper .review-details-main-item {
-	margin-top: 40px;
-}
-
-.review-details-popIn .details-rating-heading {
-	font-family: "Mulish", sans-serif;
-	font-style: normal;
-	font-weight: 600;
-	font-size: 24px;
-	line-height: 31px;
-	color: #FFFFFF;
-}
-
-.review-details-popIn .details-rating-wrapper {
-	display: flex;
-	flex-direction: column;
-	gap: 10px;
-}
-
-.review-details-popIn .details-rating-wrapper .details-rating-item {
-	display: flex;
-	justify-content: space-between;
-	gap: 40px;
-}
-
-.review-details-popIn .details-rating-wrapper .details-rating-item {
-	display: flex;
-	justify-content: space-between;
-	gap: 40px;
-}
-
-.details-rating-item .details-rating-item-title {
-	font-family: "Mulish", sans-serif;
-	font-style: normal;
-	font-weight: 400;
-	font-size: 14px;
-	line-height: 22px;
-	display: flex;
-	align-items: center;
-	color: #FFFFFF;
-	text-align: left;
-}
-
-.review-details-popIn .details-rating-item .rating,
-.review-details-popIn .rating-inner-wrapper .rating {
-	display: flex;
-	align-items: center;
-	justify-content: flex-start;
-	gap: 5px;
-}
-
-.single-star {
-	display: flex;
-	align-items: center;
-}
-
-
-.review-details-popIn .close-btn {
-	position: absolute;
-	right: 48px;
-	top: 48px;
-	height: 24px;
-	width: 24px;
-	background: transparent;
-	border: unset;
-	color: white;
-	cursor: pointer;
-}
-
-.review-details-popIn .close-btn>i {
-	font-size: 30px;
 }
