complete edit rating workflow and design

--- a/src/Feedbacks/FeedbackForms/RatingForm/RatingSelect.css
+++ b/src/Feedbacks/FeedbackForms/RatingForm/RatingSelect.css
@@ -1,31 +1,36 @@
 .rating-select {
-    display: inline-block;
-    font-size: 16px;
-  }
+  display: flex;
+  gap: 5px;
+  font-size: 16px;
+}
 
-  .rating-star {
-    color: #d8d8d8;
-    transition: color 0.2s;
-    cursor: pointer;
-  }
-  
-  .filled {
-    color: red;
-  }
-  
-  .half-filled {
-    color: red;
-    position: relative;
-    display: inline-block;
-  }
-  
-  .half-filled:after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 50%;
-    height: 100%;
-    overflow: hidden;
-  }
-  
+.rating-star {
+  color: #f3d779;
+  transition: color 0.2s;
+  cursor: pointer;
+}
+
+.rating-star svg.star {
+  width: 22px;
+  height: 19px;
+}
+
+.filled {
+  color: #f3d779;
+}
+
+.half-filled {
+  color: #f3d779;
+  position: relative;
+  display: inline-block;
+}
+
+.half-filled:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  overflow: hidden;
+}
