--- a/src/components/PopUps/EditReviewPopUP.css
+++ b/src/components/PopUps/EditReviewPopUP.css
@@ -132,6 +132,7 @@
     background: #4b4966;
     color: white;
     border: unset;
+    font-family: "Mulish", sans-serif;
     font-weight: 400;
     text-align: start;
     display: -webkit-box;
@@ -158,14 +159,22 @@
 }
 
 .edit-review-popIn .details-review-textarea:focus {
-    background: #4b4966;
+    background: #1e1d2b;
+}
+
+.edit-review-popIn .details-review-textarea:focus::-webkit-scrollbar-track {
+    background-color: #1e1d2b;
+}
+
+.edit-review-popIn .details-review-textarea:focus::-webkit-scrollbar-thumb {
+    background: #4b4966
 }
 
 @media (max-width: 1024px) {
     .edit-review-popIn .details-review-textarea {
-        width: 100%;
-        min-width: 100%;
-        max-width: 100%;
+        width: calc(100% - 50px);
+        min-width: calc(100% - 50px);
+        max-width: calc(100% - 50px);
     }
 }
 
