--- a/src/LoginPage/LoginPage.css
+++ b/src/LoginPage/LoginPage.css
@@ -1,116 +1,130 @@
 /* apply some basic styles to the page */
 body {
-    font-family: var(--font3);
-    margin: 0px;
-    opacity: 1.0;
-    /* background-color: blue; */
-  }
+  font-family: var(--font3);
+  margin: 0px;
+  opacity: 1.0;
+  /* background-color: blue; */
+}
 
-  
-  /* center the page and add some padding */
-  .login-page-container {
-    display: flex;
-    flex-direction: column;
-    /* justify-content: center; */
-    align-items: center;
-    height: 100vh;
-    background-size: cover;
-    /* background-color: blue; */
-    background-position: center;
-  }
 
-  .login-page-container > :first-child {
-    margin-top: 5%;
-  }
+/* center the page and add some padding */
+.login-page-container {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
+  height: 100vh;
+  background-size: cover;
+  /* background-color: blue; */
+  background-position: center;
+}
 
-  .logo-image{
-    width: 40%;
-    margin-bottom: 0px;
-  }
+.login-page-container> :first-child {
+  margin-top: 5%;
+}
 
-  .website-name{
-    color: black;
-    font-family: var(--font3);
-    font-size: xx-large;
-    font-weight: bolder;
-    font-style: italic;
-  }
-  
-  /* apply styles to the login box */
-  .login-box {
-    margin-top: 1%;
-    background-color: rgba(255, 255, 255, 0.7);
-    border-width: 3px;
-    border-style: solid;
-    border: #E5E7E9;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-    padding: 20px;
-    width: 26%;
-    border-radius: 2%;
-  }
+.logo-image {
+  width: 40%;
+  margin-bottom: 0px;
+}
 
-  .form-header{
-     font-size: x-large;
-     margin-bottom: 8%;
-  }
-  
-  /* apply styles to the form elements */
-  .form-group {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 1.5rem !important;
-  }
-  
-  .login-form-input {
-    width: 22rem; 
-    padding: 10px;
-    border: 2px solid #E5E7E9;
-    border-radius: 20px;
-    font-size: 16px;
-    align-items: center;
-    color: black;
-    font-family: var(--font3);
-    background-color: #E5E7E9;
-  }
+.website-name {
+  color: rgb(255, 255, 255);
+  font-family: var(--font3);
+  font-size: xx-large;
+  font-weight: bolder;
+  font-style: italic;
+}
 
-  .last-line{
-    width: 25rem;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-top: 2rem;
-    margin-bottom: 3rem;
-    /* color: skyblue; */
-  }
+/* apply styles to the login box */
+.login-box {
+  margin-top: 100px;
+  background-color: #2c2b3f;
+  padding: 25px;
+  width: 560px;
+  border-radius: 2%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 45px;
+  box-sizing: border-box;
+}
 
-  .forgot-password{
-    margin-top: 0.5rem;
-    color: red;
-    font-family: var(--font2);
-    font-size: large;
-    font-weight: bold;
-    margin-right: auto;
-    cursor: pointer;
-  }
-  
-  .forgot-password:hover {
-    background-color: rgba(255, 0, 0, 0.2);
-    border-radius: 10px;
-    padding: 1px;
-    text-decoration: underline;
-  }
-  
-  .login-submit-button {
-    width: 50%;
-    border: none;
-    
-    margin-top: 0% !important;
-    padding: 8px;
-    margin-right: 7%;
-    border-radius: 0px;
-    align-items: center;
-    color: white;
-    font-size: 20px;
-    font-family: var(--font2);
-    cursor: pointer;
-  }
+.login-box form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 25px;
+}
+
+.form-header {
+  color: white;
+  text-transform: uppercase;
+  font-size: 28px;
+  font-weight: 700;
+  letter-spacing: 3px;
+  margin-bottom: unset;
+}
+
+/* apply styles to the form elements */
+.form-group {
+  display: flex;
+  flex-direction: column;
+}
+
+.login-form-input {
+  width: 22rem;
+  padding: 10px;
+  border: 2px solid #E5E7E9;
+  border-radius: 5px;
+  font-size: 16px;
+  color: black;
+  font-family: var(--font3);
+  background-color: #E5E7E9;
+}
+
+.last-line {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  gap: 50px;
+}
+
+.last-line button[type="submit"] {
+  padding: 0.5rem 1rem;
+  border: none;
+  background-color: #6dad64;
+  border-radius: 5px;
+  cursor: pointer;
+  color: white;
+  text-transform: uppercase;
+  font-size: 18px;
+  font-weight: 700;
+  letter-spacing: 3px;
+  font-family: inherit;
+  margin: unset;
+  width: 180px;
+  height: 42px;
+}
+
+.last-line button[type="submit"]:hover {
+  background-color: #5e9c55;
+}
+
+.forgot-password {
+  color: white;
+  font-family: inherit;
+  font-size: 12px;
+  text-transform: uppercase;
+  font-weight: 100;
+  letter-spacing: 1px;
+  cursor: pointer;
+  margin-left: auto;
+}
+
+.forgot-password:hover {
+  color: #dae7d9;
+}
