--- a/src/SignUp/SignUp.css
+++ b/src/SignUp/SignUp.css
@@ -1,4 +1,4 @@
-.body{
+.body {
   font-family: var(--font2) !important;
 }
 
@@ -12,26 +12,35 @@
   padding: 2rem;
 }
 
-.signup-container > :first-child {
+.signup-container> :first-child {
   margin-top: 2%;
 }
 
-.logo-image2{
+.logo-image2 {
   width: 7%;
   margin-bottom: 3%;
 }
 
 .signup-form {
-
   display: flex;
-  height: 52%;
-  width: 50%;
-  padding-top: 2%;
-  background-color: #fff;
+  height: auto;
+  width: 800px;
+  background-color: #2C2B3F;
   flex-direction: column;
   align-items: center;
-  border: 3px solid #E5E7E9;
-  border-radius: 10px;
+  border-radius: 5px;
+  padding: 40px;
+  box-sizing: border-box;
+  gap: 25px;
+}
+
+.signup-form h2 {
+  color: white;
+  text-transform: uppercase;
+  font-size: 28px;
+  font-weight: 700;
+  letter-spacing: 3px;
+  margin-bottom: 20px;
 }
 
 
@@ -40,17 +49,16 @@
 } */
 
 .signup-row {
-  margin-top: 2%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 1rem;
-  /* background-color: red; */
-  width: 80%;
+  width: 100%;
+  gap: 40px;
 }
 
 .signup-row .signup-field {
-  flex-basis: 45%;
+  width: 47%;
+  display: flex;
 }
 
 .signup-field label {
@@ -63,11 +71,13 @@
 }
 
 .signup-field input {
-  width: 100%;
-  padding: 0.5rem;
+  width: 22rem;
+  padding: 10px;
   border: 2px solid #E5E7E9;
-  font-family: var(--font2);
-  border-radius: 20px;
+  border-radius: 5px;
+  font-size: 16px;
+  color: black;
+  font-family: var(--font3);
   background-color: #E5E7E9;
 }
 
@@ -95,17 +105,39 @@
 }
 
 button[type="submit"] {
-  margin-top: 1rem;
   padding: 0.5rem 1rem;
   border: none;
-  border-radius: 0.25rem;
-  background-color: red;
-  color: #fff;
-  font-size: 1rem;
-  border-radius: 10px;
+  background-color: #6dad64;
+  border-radius: 5px;
   cursor: pointer;
+  color: white;
+  text-transform: uppercase;
+  font-size: 18px;
+  font-weight: 700;
+  letter-spacing: 3px;
+  font-family: inherit;
+  margin: unset;
+  width: 220px;
+  height: 42px;
+  margin-top: 15px;
 }
 
-button[type="submit"]:hover {
-  background-color: #005fa3;
+.last-line button[type="submit"]:hover {
+  background-color: #5e9c55;
+}
+
+.signup-radio-section {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+  flex-direction: column;
+  margin-top: 20px;
+}
+
+.signup-form h2.radio-heading {
+  font-size: 18px;
+  letter-spacing: 1px;
+  margin-bottom: unset;
 }
