--- a/src/Settings/Settings.css
+++ b/src/Settings/Settings.css
@@ -1,9 +1,48 @@
 .account-settings {
-    margin: 20px;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
+  margin: 20px;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+.allSections {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.section {
+  background-color: #2C2B3F;
+  padding: 27px;
+  border-radius: 5px;
+}
+
+.fields {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  justify-content: space-around;
+  background-color: #2C2B3F;
+  padding: 27px;
+  border-radius: 5px;
+}
+
+button.submit-Button.button {
+  padding: 0.5rem 1rem;
+  border: none;
+  background-color: #6dad64;
+  border-radius: 5px;
+  cursor: pointer;
+  color: white;
+  text-transform: uppercase;
+  font-size: 18px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  font-family: inherit;
+  margin: unset;
+  width: auto;
+  height: 42px;
+  margin-top: 15px;
+}
   
   .header {
     display: flex;
@@ -16,21 +55,36 @@
     font-size: 24px;
   }
   
-  .fields {
-    margin-top: 20px;
-  }
+ 
   
   .field {
     display: flex;
     align-items: center;
     margin-bottom: 10px;
-  }
+    flex-direction: column;
+    gap: 7px;
+}
+
+input[type="text"] {
+  width: 33rem;
+  padding: 10px;
+  border: 2px solid #E5E7E9;
+  border-radius: 5px;
+  font-size: 16px;
+  color: black;
+  font-family: var(--font3);
+  background-color: #E5E7E9;
+}
   
-  .label {
-    font-weight: bold;
-    margin-right: 10px;
-    width: 30%;
-  }
+  label {
+    color: white;
+    font-weight: 300;
+    font-size: 14px;
+    letter-spacing: 1px;
+    margin-bottom: unset;
+    text-align: left;
+    width: 100%;
+}
   
   .input-field {
     width: 70%;
@@ -39,9 +93,9 @@
     border-radius: 4px;
   }
   
-  .toggle-switch {
-    margin-top: 20px;
-  }
+  .toggle-switch label {
+    font-size: 20px;
+}
   
   .toggle-button {
     display: inline-block;
@@ -51,6 +105,7 @@
     border-radius: 17px;
     cursor: pointer;
     transition: background-color 0.3s;
+    margin: unset;
   }
   
   .toggle-button.active {
