--- a/src/Profile/Profile.css
+++ b/src/Profile/Profile.css
@@ -75,6 +75,20 @@ input[type="text"] {
   font-family: var(--font3);
   background-color: #E5E7E9;
 }
+input[type="passwordForChange"] {
+  width: 33rem;
+  padding: 10px;
+  border: 2px solid #e5e7e9;
+  border-radius: 5px;
+  font-size: 16px;
+  color: black;
+  font-family: var(--font3);
+  background-color: #e5e7e9;
+  /* Hide text */
+  -webkit-text-security: disc;
+  -moz-text-security: disc;
+  -ms-text-security: disc;
+}
   
   label {
     color: white;
@@ -96,6 +110,16 @@ input[type="text"] {
   .toggle-switch label {
     font-size: 20px;
 }
+.toggle-switch-profile label {
+  width: 33rem;
+  padding: 10px;
+  border: 2px solid #E5E7E9;
+  border-radius: 5px;
+  font-size: 16px;
+  color: black;
+  font-family: var(--font3);
+  background-color: #E5E7E9;
+}
   
   .toggle-button {
     display: inline-block;
@@ -106,6 +130,7 @@ input[type="text"] {
     cursor: pointer;
     transition: background-color 0.3s;
     margin: unset;
+    margin-left: 12px;
   }
   
   .toggle-button.active {
